Fix hamburger menu on mobile, and its alignment of the social icons.

--- a/css/dancedeets.css
+++ b/css/dancedeets.css
@@ -516,4 +516,9 @@ footer {
 	font-size: 20px;
 	padding: 10px 5px;
 	line-height: 30px;
+	display: inline;
+}
+
+.nav > .nav-icon-row {
+	padding: 10px 15px;
 }
